--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a utility that you can run before npm install to remove outdated dependencies in your node_modules file.",
   "main": "index.js",
   "scripts": {
-    "test": "standard && nyc tap ./test/*.js"
+    "test": "standard && nyc tap ./test/*.js && nyc report --reporter=text-lcov | coveralls"
   },
   "bin": {
     "npm-remove-outdated": "./index.js"
@@ -20,6 +20,7 @@
     "rimraf": "^2.5.2"
   },
   "devDependencies": {
+    "coveralls": "^2.11.9",
     "nyc": "^6.1.1",
     "standard": "^6.0.8",
     "tap": "^5.7.0"
