--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a utility that you can run before npm install to remove outdated dependencies in your node_modules file.",
   "main": "index.js",
   "scripts": {
-    "test": "standard && nyc tap ./test/*.js && nyc report --reporter=text-lcov | coveralls"
+    "test": "standard && nyc tap ./test/*.spec.js && nyc report --reporter=text-lcov | coveralls"
   },
   "bin": {
     "npm-remove-outdated": "./index.js"
