--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "This is a utility that you can run before npm install to remove outdated dependencies in your node_modules file.",
   "main": "index.js",
+  "repository" : { 
+    "type" : "git", 
+    "url" : "https://github.com/jcblw/npm-remove-outdated.git"
+  },
   "scripts": {
     "test": "standard && nyc tap ./test/*.spec.js && nyc report --reporter=text-lcov | coveralls"
   },
